--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -76,7 +76,7 @@
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Perfil del Usuario</h5>
+                                <h5 class="card-title">Listar Usuarios</h5>
                                 {# Botón que lleva a la página 'inicio' #}
                                 <a href="{{ url_for('listar_usuarios')}}" class="btn btn-outline-success">Ver Detalles</a>
                             </div>
