--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -99,11 +99,11 @@
                             <div class="card-body text-white">
                                 <h5 class="card-title">Registrar Productos</h5>
                                 {# Botón que puede redirigir a agregar productos #}
-                                <a href="{{ url_for('listar_productos_agregados') }}" class="btn btn-outline-success">Ver Detalles</a>
+                                <a href="{{ url_for('agregar_producto') }}" class="btn btn-outline-success">Ver Detalles</a>
                             </div>
                         </div>
                         <div class="col-md-4 align-content-center">
-                            <a href="{{ url_for('listar_productos_agregados') }}">
+                            <a href="{{ url_for('agregar_producto') }}">
                                 <img src="{{ url_for('static', filename='agregarp.png') }}" class="img-fluid rounded-start" alt="Agregar Producto">
                             </a>
                         </div>
